# validar-os

./: .gitignore  pyproject.toml
validar_os/: main.py  ordem.py
validar_os/pdfs_teste/: __init__.py
validar_os/validadores/: inplac.py  utils.py
